crates/ato-tests/tests/snapshots/integration_tests__complex_design.snap
---
source: crates/ato-tests/tests/integration_tests.rs
expression: "serde_json::json!({\n    \"modules\": design.module_count(), \"fields\": design.field_count(),\n    \"connections\": design.connection_count(), \"constraints\":\n    design.constraint_count(),\n})"
---
connections: 1
constraints: 0
fields: 5
modules: 2
